<resources>
    <string name="app_name">House Rent</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="forgt_psswrd">Forgot Password ?</string>
    <string name="btn_signin">Sign in</string>
    <string name="sgn_in_wth">Sign in with</string>
    <string name="dnt_accnt">Dont have any Account?</string>
    <string name="sign_up">Signup</string>
</resources>
