<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:background="@drawable/back"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/rent_house"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="30sp"
            android:text="House"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Rent"
            android:textSize="30sp"
            android:layout_marginLeft="5dp"
            android:textStyle="bold"/>
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="450dp"
        app:cardElevation="5dp"
        app:cardCornerRadius="10dp"
        app:cardUseCompatPadding="true"
        android:alpha=".89"
        android:layout_margin="10dp"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Login with"
                android:layout_gravity="center_horizontal"
                android:textSize="20sp"
                />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Your Account"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal"
                android:textSize="25sp"
                />
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameId"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginBottom="3dp"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                >
                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    />

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginLeft="10dp"
                android:text="@string/forgt_psswrd"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="60dp"
                app:cardElevation="5dp"
                app:cardCornerRadius="5dp"
                app:cardUseCompatPadding="true"
                android:backgroundTint="#B42020"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/btn_signin"
                    />
            </androidx.cardview.widget.CardView>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sgn_in_wth"
                />

            <androidx.cardview.widget.CardView
                android:layout_width="170dp"
                android:layout_height="wrap_content"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="30dp"
                >
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    >
                    <ImageView
                        android:id="@+id/gmail"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/google"
                        android:layout_marginRight="5dp"
                        android:layout_marginLeft="15dp"
                        android:layout_marginTop="8dp"
                        />
                    <ImageView
                        android:id="@+id/fb"
                        android:layout_width="50dp"
                        android:layout_height="50dp"
                        android:src="@drawable/fb"
                     android:layout_margin="8dp"
                        />
                </LinearLayout>

            </androidx.cardview.widget.CardView>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                >
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/dnt_accnt"
                    />
                <TextView
                    android:id="@+id/signUpId"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up"
                    android:layout_marginLeft="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/colorPrimary"
                    />
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>